# chameo

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
client/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
client/public/idl/: chameo_privacy.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/auth/: page.tsx
client/src/app/dashboard/: layout.tsx  page.tsx
client/src/components/: background-glow.tsx  funding-flow-card.tsx  site-footer.tsx  site-header.tsx
client/src/components/dashboard/: dashboard-header.tsx  dashboard-sidebar.tsx
client/src/components/sections/: compliance.tsx  cta.tsx  hero.tsx  (+4 more)
client/src/lib/: analytics.ts  api.ts  auth.ts  campaign.ts  privacy-cash.ts  voting.ts
contracts/: Anchor.toml  package-lock.json  package.json  tsconfig.json
contracts/programs/chameo-privacy/: Cargo.toml
contracts/programs/chameo-privacy/src/: analytics.rs  claims.rs  eligibility.rs  lib.rs  voting.rs
contracts/tests/: chameo.test.ts
server/: .env.example  .prettierrc  package-lock.json  package.json  tsconfig.json
server/src/: app.ts  config.ts  index.ts  types.d.ts
server/src/config/: db.ts  env.ts  index.ts  solana.ts
server/src/lib/: cloudinary.ts
server/src/scripts/: sweep-and-delete-campaigns.ts  sweep-campaign-onchain.ts
server/src/shared/: crypto.ts  db.ts  errors.ts  index.ts  logger.ts  messaging.ts  solana.ts  validation.ts
server/src/types/: externals.d.ts
server/src/utils/: crypto.ts  index.ts  validation.ts
zk/noir/vote_eligibility/: Nargo.toml  README.md
(+95 files in other folders)
