[package]
name = "chameo-privacy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chameo_privacy"

[dependencies]
anchor-lang = "0.31.1"
inco-lightning = { version = "0.1.4", features = ["cpi"] }
solana-poseidon = "2.2.4"

[features]
default = []
idl-build = ["anchor-lang/idl-build"]
